src/objects/Form__c.object
<CustomObject>
    <description>Represents a distinct form to be generated through the Adobe Forms Service.</description>
    <fields>
        <fullName>Copy_per_FAC__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Drives behavior of form generation to produce a document request for each active FAC associated with the account.</description>
        <inlineHelpText>If checked then a separate form is generated for each active FAC with that FAC&apos;s information</inlineHelpText>
        <label>Copy per FAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Request_Record_Type__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Determines the record type for the generated document request.</description>
        <label>Document Request Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rights Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice of Sale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>REPONTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKCVCUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKCVREP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPODOC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Arbitrary unique number assigned to the record to facilitate migration of metadata between environments.</description>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>